Add ppw prefix to message bar internal classes

--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
@@ -1,5 +1,5 @@
-<mat-card class="message-severity-{{ severity }}">
-    <mat-card-content class="message-bar-content">
+<mat-card class="ppw-message-severity-{{ severity }}">
+    <mat-card-content class="ppw-message-bar-content">
         {{ message }}
     </mat-card-content>
 </mat-card>
