--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,6 +96,8 @@ body {
     --ppw-expandable-card-header-indicator-color: white;
 
     --ppw-message-bar-warning-text-color: black;
+
+    --ppw-table-row-highlight-background-color: rgba(0, 0, 255, 0.03);
 }
 
 .no-margins {
