--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
@@ -1,29 +1,24 @@
-<button class="sidenav-close-button" *ngIf="showMenuCloseButton" (click)="closeSidebar.emit()">
+<button class="ppw-sidenav-close-button" *ngIf="showMenuCloseButton" (click)="closeSidebar.emit()">
     <mat-icon>close</mat-icon>
 </button>
 
-<div class="sidenav-content-wrapper">
+<div class="ppw-sidenav-content-wrapper">
     <div class="flex-column">
         <ng-container *ngIf="logoUrl">
             <div class="flex-column logo-wrapper" [ngClass]="{ 'align-items-center': centerLogo }">
-                <img
-                    ngSrc="{{ logoUrl }}"
-                    alt="Logo"
-                    height="{{ logoHeight }}"
-                    width="{{ logoWidth }}"
-                    priority="eager" />
+                <img [ngSrc]="logoUrl" alt="Logo" [height]="logoHeight" [width]="logoWidth" priority="eager" />
             </div>
         </ng-container>
-        <div class="top-content">
+        <div class="ppw-sidenav-top-content">
             <ng-content select="[ppw-sidebar-top]"></ng-content>
         </div>
-        <div class="navigation-wrapper flex-column">
+        <div class="ppw-sidenav-navigation-wrapper flex-column">
             <ng-container *ngFor="let navigationItem of navigationItems">
                 <ng-container *ngTemplateOutlet="navigationItemTemplate; context: { navigationItem }"></ng-container>
             </ng-container>
         </div>
     </div>
-    <div class="flex-column bottom-content">
+    <div class="flex-column ppw-sidenav-bottom-content">
         <ng-content select="[ppw-sidebar-bottom]"></ng-content>
     </div>
 </div>
@@ -31,23 +26,19 @@
 <ng-template #navigationItemTemplate let-navigationItem="navigationItem" let-level="level">
     <button
         type="button"
-        class="navigation-item"
+        class="ppw-sidenav-navigation-item"
         [class.navigation-item-disabled]="navigationItem.isEnabled === false"
         [style.margin-left]="level * 12 + 'px'"
         (click)="onClickNavigationItem(navigationItem)">
-        <span class="navigation-item-link">
+        <span class="ppw-sidenav-navigation-item-link">
             <ng-container *ngIf="navigationItem.icon">
-                <i
-                    [class]="navigationItem.icon"
-                    class="ppw-navigation-icon"
-                    [style.font-size]="navigationItemFontSize"></i>
+                <i [class]="navigationItem.icon" class="ppw-sidenav-navigation-item-icon"></i>
             </ng-container>
-            <span [style.font-size]="navigationItemFontSize">{{ navigationItem.label | translate }}</span>
+            <span class="ppw-sidenav-navigation-item-text">{{ navigationItem.label | translate }}</span>
         </span>
         <i
             *ngIf="(navigationItem.children?.length ?? 0) > 0"
             class="fa-solid"
-            [style.font-size]="navigationItemFontSize"
             [class.fa-angle-down]="navigationItemIsOpened(navigationItem)"
             [class.fa-angle-left]="!navigationItemIsOpened(navigationItem)"></i>
     </button>
