--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,11 +1,11 @@
-<mat-drawer-container class="app-wireframe-container">
+<mat-drawer-container class="ppw-app-wireframe-container">
     <mat-drawer
         [mode]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'over' : 'side'"
         [ngClass]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'"
         [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
         (opened)="sidebarOpened()"
         (closed)="sidebarClosed()"
-        class="drawer-color">
+        class="ppw-app-wireframe-drawer">
         <ppw-left-sidenav
             (closeSidebar)="closeSidebar()"
             [navigationItems]="navigationItems"
@@ -14,10 +14,10 @@
             [logoHeight]="sidebarOptions?.logoHeight ?? 100"
             [logoWidth]="sidebarOptions?.logoWidth ?? 100"
             [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice">
-            <div ppw-sidebar-top>
+            <div ppw-sidebar-top class="ppw-sidebar-top-content">
                 <ng-content select="[ppw-sidebar-top-content]"></ng-content>
             </div>
-            <div ppw-sidebar-bottom>
+            <div ppw-sidebar-bottom class="ppw-sidebar-bottom-content">
                 <ng-content select="[ppw-sidebar-bottom-content]"></ng-content>
             </div>
         </ppw-left-sidenav>
