--- a/src/app/expandable-card/expandable-card-demo.component.html
+++ b/src/app/expandable-card/expandable-card-demo.component.html
@@ -4,3 +4,6 @@
 <ppw-expandable-card [cardTitle]="'Demo card which can be collapsed'">
     <div>card contents</div>
 </ppw-expandable-card>
+<ppw-expandable-card [cardTitle]="'Demo card which can be opened'" [openAsExpanded]="false">
+    <div>card contents</div>
+</ppw-expandable-card>
