--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
@@ -42,12 +42,14 @@
             [class.fa-angle-left]="!navigationItemIsOpened(navigationItem)"></i>
     </button>
     <ng-container *ngIf="navigationItemIsOpened(navigationItem) && navigationItem.children">
-        <ng-container *ngFor="let child of navigationItem.children">
-            <ng-container
-                *ngTemplateOutlet="
-                    navigationItemTemplate;
-                    context: { navigationItem: child, level: (level ?? 1) + 1 }
-                "></ng-container>
-        </ng-container>
+        <div class="ppw-sidenav-navigation-item-children-wrapper flex-column">
+            <ng-container *ngFor="let child of navigationItem.children">
+                <ng-container
+                    *ngTemplateOutlet="
+                        navigationItemTemplate;
+                        context: { navigationItem: child, level: (level ?? 1) + 1 }
+                    "></ng-container>
+            </ng-container>
+        </div>
     </ng-container>
 </ng-template>
