--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="ppw-app-wireframe-container">
     <mat-drawer
         *ngIf="showWireframe"
-        [mode]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'over' : 'side'"
+        [mode]="sidenavMode"
         [ngClass]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'"
         [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
         (opened)="sidebarOpened()"
@@ -26,7 +26,6 @@
     <mat-drawer-content>
         <div class="ppw-page-container">
             <ppw-toolbar
-                *ngIf="showWireframe"
                 (toggleSidebar)="toggleSidebar()"
                 [isSidenavOpen]="sidebarIsOpen"
                 [showPageTitle]="!!sidebarOptions?.showPageTitle"
