--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -31,7 +31,7 @@
                 [showPageTitle]="!!sidebarOptions?.showPageTitle"
                 [toolbarHeightPx]="toolbarHeightPx"
                 [showMenuToggle]="
-                    (!!sidebarOptions?.closedByDefaultOnLargerDevice && !sidebarIsOpen) ||
+                    !!sidebarOptions?.closedByDefaultOnLargerDevice ||
                     (!sidebarOptions?.closedByDefaultOnLargerDevice &&
                         (isSmallDevice || (!sidebarIsOpen && !isLargerDevice)))
                 ">
