Add if statement on the toolbar

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -26,6 +26,7 @@
     <mat-drawer-content>
         <div class="ppw-page-container">
             <ppw-toolbar
+                *ngIf="showWireframe"
                 (toggleSidebar)="toggleSidebar()"
                 [isSidenavOpen]="sidebarIsOpen"
                 [showPageTitle]="!!sidebarOptions?.showPageTitle"
