--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -28,7 +28,13 @@
                 [ngStyle]="options?.columnHeaderStyles?.[column.name]?.()"
                 *matHeaderCellDef
                 class="ppw-column-type-{{ column.type }}">
-                {{ column.label }}
+                <ng-container *ngIf="(options?.columnHeaderTemplates?.[column.name]?.()); else textTemplateContainer">
+                    <ng-container
+                        *ngTemplateOutlet="headerTemplateCellTemplate; context: { headerTemplate: (options?.columnHeaderTemplates?.[column.name]()) }"></ng-container>
+                </ng-container>
+                <ng-template #textTemplateContainer>
+                    <ng-container *ngTemplateOutlet="headerTextCellTemplate; context: { column }"></ng-container>
+                </ng-template>
             </th>
             <td
                 mat-cell
@@ -54,3 +60,10 @@
             [class.clickable]="options?.rowClickAction"></tr>
     </table>
 </section>
+
+<ng-template #headerTemplateCellTemplate let-headerTemplate="headerTemplate">
+    <ng-container *ngTemplateOutlet="headerTemplate"></ng-container>
+</ng-template>
+<ng-template #headerTextCellTemplate let-column="column">
+    {{ column.label }}
+</ng-template>
