Update the filter-table example to show a template in the header row of the active-column

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -52,3 +52,7 @@
         <mat-icon *ngSwitchCase="false">close</mat-icon>
     </ng-container>
 </ng-template>
+
+<ng-template #addTemplate
+    ><button mat-icon-button><mat-icon fontSet="fa" fontIcon="fa-plus"></mat-icon></button
+></ng-template>
