--- a/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
@@ -4,5 +4,7 @@
     [length]="pagedAsyncResult.entity.totalCount"
     [pageSize]="pagedAsyncResult.entity.pageSize"
     [pageIndex]="pagedAsyncResult.entity.pageIndex - 1"
+    [pageSizeOptions]="pageSizeOptions"
+    [showFirstLastButtons]="showFirstLastButtons"
     [hidePageSize]="hidePageSize">
 </mat-paginator>
