Fix the select-all/indeterminate checkbox

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -7,8 +7,8 @@
                     color="primary"
                     [style.width]="options?.columnWidths?.['rowSelection']"
                     (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    [checked]="isAllSelected()"
+                    [indeterminate]="isSomeSelected()">
                 </mat-checkbox>
             </th>
             <td mat-cell *matCellDef="let row">
