Support confirmation dialogs without a cancel button

--- a/src/app/confirmation-dialog-demo/confirmation-dialog-demo.component.html
+++ b/src/app/confirmation-dialog-demo/confirmation-dialog-demo.component.html
@@ -1,3 +1,6 @@
-<div class="padding-8">
+<div class="flex-column gap-16 align-items-center padding-8">
     <button mat-raised-button color="primary" (click)="openConfirmationDialog()">Request confirmation</button>
+    <button mat-raised-button color="primary" (click)="openConfirmationOnlyDialog()">
+        Notify user, without cancel button
+    </button>
 </div>
