--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
@@ -5,7 +5,7 @@
     [translate]="data.bodyKey"
     [translateParams]="data.bodyParams"></mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-stroked-button [mat-dialog-close]="false">
+    <button mat-stroked-button [mat-dialog-close]="false" *ngIf="!data.allowConfirmOnly">
         <i class="fa-solid fa-ban"></i> {{ data.cancelKey | translate }}
     </button>
     <button mat-raised-button [mat-dialog-close]="true" [color]="confirmationThemePalette">
