--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -1,5 +1,20 @@
 <section class="ppw-table-container">
-    <table mat-table class="ppw-table" [dataSource]="dataSource" [trackBy]="trackByFn">
+    <table
+        mat-table
+        #dataTable
+        class="ppw-table"
+        [dataSource]="dataSource"
+        [trackBy]="trackByFn"
+        cdkDropList
+        (cdkDropListDropped)="dropTable($event)">
+        <!-- Draghandle column -->
+        <ng-container matColumnDef="rowDrag" *ngIf="enableRowDrag">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon cdkDragHandle>reorder</mat-icon>
+            </td>
+        </ng-container>
+
         <!-- Checkbox Column -->
         <ng-container matColumnDef="rowSelection" *ngIf="enableRowSelection">
             <th mat-header-cell *matHeaderCellDef>
@@ -57,8 +72,10 @@
             mat-row
             @rowsAnimation
             *matRowDef="let row; columns: columnNames"
+            cdkDrag
             [class.highlight]="options?.rowHighlightOnHover"
             [class.clickable]="options?.rowClickAction"></tr>
+        <div *cdkDragPlaceholder></div>
     </table>
 </section>
 
