--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -22,8 +22,10 @@
                     [columns]="columns"
                     [data]="players.entity.items"
                     [enableRowSelection]="true"
+                    [enableRowDrag]="true"
                     [options]="tableOptions"
                     [trackBy]="trackByFn"
+                    (orderChanged)="orderChanged($event)"
                     (selectionChanged)="updateSelected($event)"></ppw-table>
                 <ppw-pagination-bar
                     [pagedAsyncResult]="players"
@@ -34,6 +36,15 @@
         </mat-card>
     </ng-template>
 </ppw-async-result>
+
+<mat-card *ngIf="playersToSave?.length">
+    <mat-card-header>
+        <mat-card-title>Players after reordering</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div *ngFor="let p of playersToSave">{{ p | json }}</div>
+    </mat-card-content>
+</mat-card>
 
 <mat-card *ngIf="lastClickedRow">
     <mat-card-header>
