Pass the dataSource to the cdkDropListData prop

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -6,6 +6,7 @@
         [dataSource]="dataSource"
         [trackBy]="trackByFn"
         cdkDropList
+        [cdkDropListData]="dataSource"
         (cdkDropListDropped)="dropTable($event)">
         <!-- Draghandle column -->
         <ng-container matColumnDef="rowDrag" *ngIf="enableRowDrag">
