--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -13,6 +13,9 @@
             <input matInput formControlName="lastName" />
         </mat-form-field>
     </form>
+    <div>
+        <mat-slide-toggle [(ngModel)]="enableRowDrag">Allow row dragging</mat-slide-toggle>
+    </div>
 </ppw-search-filter>
 <ppw-async-result [asyncResult]="players$ | async" [pending]="pending$ | async">
     <ng-template #success let-players>
@@ -22,7 +25,7 @@
                     [columns]="columns"
                     [data]="players.entity.items"
                     [enableRowSelection]="true"
-                    [enableRowDrag]="true"
+                    [enableRowDrag]="enableRowDrag"
                     [options]="tableOptions"
                     [trackBy]="trackByFn"
                     (orderChanged)="orderChanged($event)"
