Make sure the drawer can't be closed with the escape key

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,5 +1,6 @@
 <mat-drawer-container class="ppw-app-wireframe-container">
     <mat-drawer
+        [disableClose]="true"
         *ngIf="showWireframe"
         [mode]="sidenavMode"
         [ngClass]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'"
