--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
@@ -38,8 +38,8 @@
         <i
             *ngIf="(navigationItem.children?.length ?? 0) > 0"
             class="fa-solid"
-            [class.fa-angle-down]="navigationItemIsOpened(navigationItem)"
-            [class.fa-angle-up]="!navigationItemIsOpened(navigationItem)"></i>
+            [class.fa-angle-down]="!navigationItemIsOpened(navigationItem)"
+            [class.fa-angle-up]="navigationItemIsOpened(navigationItem)"></i>
     </button>
     <ng-container *ngIf="navigationItemIsOpened(navigationItem) && navigationItem.children">
         <div class="ppw-sidenav-navigation-item-children-wrapper flex-column">
