Fix navigation panel not closing on mobile devices after clicking a navigation item

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -10,6 +10,7 @@
         class="ppw-app-wireframe-drawer">
         <ppw-left-sidenav
             (closeSidebar)="closeSidebar()"
+            (navigated)="onNavigate()"
             [navigationItems]="navigationItems"
             [centerLogo]="!!sidebarOptions?.centerLogo"
             [logoUrl]="sidebarOptions?.logoUrl"
