Add flex-column to left-sidenav scss
This makes it no longer required by projects relying on this package.

--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.scss
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.scss
@@ -14,6 +14,11 @@
     }
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .ppw-sidenav-close-button {
     border: none;
     padding: 1rem;
