Correctly apply padding and overflow for fixed table heights

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -1,4 +1,4 @@
-<section class="ppw-table-container">
+<section class="ppw-table-container" [class.fixed-height]="hasFixedHeight">
     <table
         mat-table
         #dataTable
