--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
@@ -1,9 +1,8 @@
 @use '@angular/material' as mat;
 
 .ppw-table-container {
-    $tableHeight: var(--ppw-table-height, auto);
-    @if $tableHeight != auto {
-        max-height: $tableHeight;
+    &.fixed-height {
+        max-height: var(--ppw-table-height, auto);
         padding-right: 16px;
         overflow: auto;
     }
