--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -3,6 +3,10 @@
         mat-table
         #dataTable
         class="ppw-table"
+        [class.ppw-table-header-hidden]="!!options?.header?.hidden"
+        [class.ppw-table-header-hidden-first-row-add-top-border]="
+            !!options?.header?.hidden && !!options?.header?.showFirstRowTopBorder
+        "
         [dataSource]="dataSource"
         [trackBy]="trackByFn"
         cdkDropList
@@ -77,7 +81,7 @@
             </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnNames; sticky: !!options?.stickyHeader"></tr>
+        <tr mat-header-row *matHeaderRowDef="columnNames; sticky: !!options?.header?.sticky"></tr>
         <tr
             mat-row
             @rowsAnimation
