Move column header styles to header configuration option of table
Introduces a breaking change where columnHeaderStyles should be set through header.styles

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -54,7 +54,7 @@
             <th
                 mat-header-cell
                 [style.width]="options?.columnWidths?.[column.name]"
-                [ngStyle]="options?.columnHeaderStyles?.[column.name]?.()"
+                [ngStyle]="options?.header?.styles?.[column.name]?.()"
                 *matHeaderCellDef
                 class="ppw-column-type-{{ column.type }}">
                 <ng-container *ngIf="(options?.columnHeaderTemplates?.[column.name]?.()); else textTemplateContainer">
