Move column row styles to columns configuration option of table
Introduces a breaking change where columnStyles should be set through columns.styles

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -68,7 +68,7 @@
             <td
                 mat-cell
                 [style.width]="options?.columnWidths?.[column.name]"
-                [ngStyle]="options?.columnStyles?.[column.name]?.(record.initialRecord)"
+                [ngStyle]="options?.columns?.styles?.[column.name]?.(record.initialRecord)"
                 *matCellDef="let record; let idx = index"
                 (click)="executeRowClick(record.initialRecord, column.name)"
                 class="ppw-column-type-{{ column.type }}">
